--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "babel-loader": "^8.0.6",
     "core-js": "^3.3.2",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
